refactor: improve GoogleChart view
- intorduce self field for boundComponent
- use List.of and Map.of instead of HashMap and ArrayList if immutable